[gd_scene load_steps=6 format=3 uid="uid://b6drl7m0bny4f"]

[ext_resource type="Script" uid="uid://cf3fs40x4hs6" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="Animation" id="Animation_ekxnf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l6cm7"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bqqt6"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqqt6"]
_data = {
&"RESET": SubResource("Animation_ekxnf"),
&"fade_in": SubResource("Animation_l6cm7"),
&"fade_out": SubResource("Animation_bqqt6")
}

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("animation_player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")
animation_player = NodePath("AnimationPlayer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -208.0
offset_right = 256.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 48
text = "Level Select"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 48
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bqqt6")
}
autoplay = "fade_in"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
